# WorbleRay

./: .gitattributes  .gitignore  AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Framebuffer.h  GeometricObject.cpp  GeometricObject.h  Intersection.cpp  Intersection.h  LambertMaterial.cpp  LambertMaterial.h  Light.cpp  Light.h  Makefile  Material.h  NOTES.md  OrthographicCamera.cpp  OrthographicCamera.h  Plane.cpp  Plane.h  PointD.cpp  PointD.h  PointLight.cpp  PointLight.h  README.md  README.txt  Ray.h  SDLWindow.cpp  SDLWindow.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Transformation.h  VectorD.cpp  (+5 more)
base/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GeometricObject.cpp  GeometricObject.h  Light.h  Material.h  Sampler.cpp  Sampler.h
core/: Intersection.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
impl/: AmbientLight.cpp  AmbientLight.h  Disk.cpp  Disk.h  LambertMaterial.cpp  MirrorMaterial.cpp  MirrorMaterial.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PhongMaterial.cpp  PhongMaterial.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  RegularSampler.cpp  RegularSampler.h  SDLWindow.cpp  Sphere.cpp  Sphere.h
util/: Color.cpp  Color.h  PointD.cpp  PointD2.cpp  PointD2.h  PointD3.cpp  PointD3.h  VectorD.cpp  VectorD.h  log.h  math.h
